# Loupe

./: .env.example  .env.google.example  .env.local.example  .env.openai.example  .gitignore  Question.md  README.md  docker-compose.yml  generator.py  loupe.py  pyproject.toml  scenario.txt
archive/: hr_generator.py  loupe.py  prompt_ingestion.md
src/: check_models.py  collectors.py  data_factory.py  data_generator.py  hr_loader.py  hr_manager.py  llm_factory.py  loupe.py  ontology.py  ontology_manager.py  prompt_qa.md  scenario_generator.py  schema_storage.json  utils.py
